testsuite/tests/typing-objects-bugs/pr4018_bad.compilers.reference
File "pr4018_bad.ml", line 42, characters 11-17:
42 | let f (x : entity entity_container) = ()
                ^^^^^^
Error: This type entity = < destroy_subject : id subject; entity_id : id >
       should be an instance of type
         < destroy_subject : < add_observer : < add_entity : 'a -> 'b;
                                                notify : 'a -> id -> unit > ->
                                              'b;
                               .. >;
           .. >
         as 'a
       Type
         id subject =
           < add_observer : < notify : < add_observer : 'c;
                                         notify_observers : id -> unit > ->
                                       id -> unit > ->
                            unit as 'c;
             notify_observers : id -> unit >
       is not compatible with type
         < add_observer : < add_entity : (< destroy_subject : 'd; .. > as 'a) ->
                                         'b;
                            notify : 'a -> id -> unit > ->
                          'b;
           .. >
         as 'd
       Type
         (< add_observer : < notify : 'e -> id -> unit > -> unit;
            notify_observers : id -> unit >
          as 'e, id)
         observer =
           < notify : < add_observer : 'f -> unit;
                        notify_observers : id -> unit > ->
                      id -> unit as 'g >
           as 'f = < notify : 'g >
       is not compatible with type
         < add_entity : (< destroy_subject : < add_observer : 'h -> 'b; .. >;
                           .. >
                         as 'a) ->
                        'b;
           notify : 'a -> id -> unit >
         as 'h
       The first object type has no method add_entity
